21_Kubernetes/08_Application_configuration/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
      volumes:
      - name: web-html
        configMap:
          name: env-config
