21_Kubernetes/08_Application_configuration/ng-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: ng-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-html
        configMap:
          name: ng-config
