21_Kubernetes/08_Application_configuration/ng-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ng-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - localhost
      secretName: web-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ng-service
            port:
              number: 80
